// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite should generate a basic movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1920,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1920,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 3840,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5760,
    },
  ],
}
`;

exports[`A Movement test suite should generate a basic movement in 3/4 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "D",
      "scaleName": "Aeolian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "A",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "D",
      "position": "II",
      "root": "G",
      "scaleName": "Dorian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 480,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "time": 0,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 480,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 960,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "A",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1440,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 1920,
    },
    Object {
      "dur": 480,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 2400,
    },
  ],
}
`;

exports[`A Movement test suite should generate a long movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "E",
      "position": "I",
      "root": "E",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "D",
      "position": "I",
      "root": "D",
      "scaleName": "Ionian",
      "type": "key",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 3840,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "E",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 3840,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 7680,
    },
    Object {
      "dur": 3840,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 11520,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - euclidean 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "Phrygian",
      "type": "mode",
    },
    Object {
      "key": "Ab",
      "position": "III",
      "root": "Ab",
      "scaleName": "Phrygian",
      "type": "key",
    },
    Object {
      "key": "Eb",
      "position": "III",
      "root": "Eb",
      "scaleName": "Phrygian",
      "type": "key",
    },
    Object {
      "key": "Eb",
      "position": "II",
      "root": "Db",
      "scaleName": "Dorian",
      "type": "mode",
    },
    Object {
      "key": "Eb",
      "position": "II",
      "root": "Db",
      "scaleName": "Dorian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1440,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 1440,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "Ab",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 2880,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "Eb",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 3840,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "Db",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 5280,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "Db",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "Ionian",
      "type": "mode",
    },
    Object {
      "key": "E",
      "position": "I",
      "root": "E",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "G",
      "position": "I",
      "root": "G",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "C",
      "position": "I",
      "root": "C",
      "scaleName": "Ionian",
      "type": "key",
    },
    Object {
      "key": "C",
      "position": "IV",
      "root": "F",
      "scaleName": "Lydian",
      "type": "mode",
    },
    Object {
      "key": "C",
      "position": "III",
      "root": "E",
      "scaleName": "Phrygian",
      "type": "mode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 960,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 0,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "E",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 960,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "G",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 1920,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "C",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "time": 2880,
    },
    Object {
      "dur": 640,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "time": 4800,
    },
    Object {
      "dur": 2240,
      "key": Object {
        "root": "E",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "time": 5440,
    },
  ],
}
`;
